--- a/_data/education.yml
+++ b/_data/education.yml
@@ -11,5 +11,5 @@
   uni: Temasek Polytechnic, Singapore
   date: Apr 2010 &mdash; May 2013
   summaries:
-    - description: Diploma Plus – Minor in Psychology Fundamental
-    - description: Admitted to Director’s List for AY 10/11 & AY 11/12
+    - description: Diploma Plus – Minor in Psychology Fundamentals
+    - description: Director’s List for AY 10/11 & AY 11/12
