--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,14 +1,6 @@
-# Skills
-# Passion for technology
-- skill: Passion for technology
-  description: I am always eager to develop my skill set, not just when it comes to quality assurance and general testing, but also when it comes to programming. I have experience with languages like Java, as well as HTML5, CSS3, JavaScript, as evidenced by my certification.
+- title: Programming Skills
+  remarks: (In order of decreasing familiarity)
+  description: Java, Python, Keras, Tensorflow, scikit-learn, Android development, C, Assembly language, Verilog, SQL, C#, Caffe, Objective-C
 
-# Natural teacher
-- skill: Thorough tester
-  description: I enjoy automating testing processes as well as manual exploration of different applications. I have experience with Java frameworks like TestNG and JUnit, as well as web tools like Selenium or Cucumber.
-
-# Quick learner
-- skill: Quick learner
-  description: I can quickly adapt to new environments and thrive in challenging situations. I bring a positive attitude with me wherever I go and I want to help others with any and all challenges.
-
-
+- title: Software Skills
+  description: Eclipse, Android Studio, Visual Studio, Github, LCPExpresso, Jupyter Notebook, Xcode, Vivado, MS-Office
