--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -36,3 +36,20 @@
       duration: Jun, 2013 &mdash; Jun, 2015
       summaries:
         - description: Responded to emergency calls and provided pre-hospital care services, life support and first-aid treatment to critically ill and injured patients.
+
+- category: Languages
+  experiences:
+    - title: 
+      duration: 
+      summaries:
+        - description: Tamil - Mother tongue
+        - description: English - Proficient (level C2 on European Language Scale)
+        - description: Japanese - Basic knowledge (level A1)
+        - description: German - Basic knowledge (level A1)
+
+- category: Hobbys
+  experiences:
+    - title: 
+      duration: 
+      summaries:
+        - description: Hiking, Cycling, Current affairs, Tech enthusiast
