--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -14,15 +14,15 @@
   - title: Project Manager Intern – Blue Glue (Youkilele) Ltd, Indonesia
     duration: Aug, 2012 &mdash; Dec, 2012
     summaries: 
-    - description: Lead a team in conceptualizing and building an Employee Task Management web application
-    - description: Revamped the Database system with new relational database for Manufacturing and Inventory departments
+    - description: Leads a team in conceptualizing and building an Employee Task Management web application
+    - description: Revamped Database system with new relational database for Manufacturing and Inventory departments
 
 - category: Leadership
   experiences:
   - title: Delegate – Youth Model ASEAN Conference
     duration: Dec, 2012
     summaries: 
-    - description: Discussed the socio-political, environmental and economic issues prevailing in ASEAN region with the Singapore Minister of Culture, Community and Youth
+    - description: Discussed socio-political, environmental and economic issues prevailing in ASEAN region with the Singapore Minister of Culture, Community and Youth
 
   - title: President – IT Special Interest Group
     duration: Jul, 2011 &mdash; Jun, 2012
@@ -35,7 +35,7 @@
     - title: Emergency Ambulance Medic – Singapore Civil Defence Force
       duration: Jun, 2013 &mdash; Jun, 2015
       summaries:
-        - description: Responded to emergency calls and provided pre-hospital care services, life support and first-aid treatment to critically ill and injured patients.
+        - description: Responded to emergency calls and provided pre-hospital care services, life support and first-aid treatment to critically ill and injured patients
 
 - category: Languages
   experiences:
@@ -47,7 +47,7 @@
         - description: Japanese - Basic knowledge (level A1)
         - description: German - Basic knowledge (level A1)
 
-- category: Hobbys
+- category: Hobbies
   experiences:
     - title: 
       duration: 
