--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,15 +3,15 @@
   - title: Application of Reinforcement Learning in Weather Routing - Dissertation
     url: https://bitbucket.org/account/signin/?next=/debabrota_basu/weather_routing
     date: Aug 2017 &mdash; Present
-    description: Optimize velocity of a vessel so as to reduce fuel consumption rate while meeting port schedules under harsh weather conditions using calculus of variation and Reinforcement learning approaches such as Q-learning.
-  
+    description: Optimize velocity of a vessel to reduce fuel consumption rate while meeting port schedules under harsh weather conditions using calculus of variation and Q-learning.
+
   - title: Dance Tracker
     url: https://github.com/cs3002-bballidance/Integration
-    description: Built an wearable device that tracks and predicts dance moves using machine learning and IoT sensors. CNN and LSTM algorithms were used to train the time-series data and was implemented with Keras TensorFlow framework.
+    description: Built an wearable device that tracks and predicts dance moves using machine learning and IoT sensors. CNN and LSTM algorithms were used to train the time-series data in Keras TensorFlow framework with 98% accuracy.
 
   - title: Italian Hand Gesture Recognition
     url: https://github.com/arshrahman/Machine-Learning
-    description: Built Image classification agorithms such as CNN, RNN to recognize Italian hand signs in python sci-kit learn and TensorFlow environments.
+    description: Built CNN and RNN Image classification algorithms using python sci-kit learn and TensorFlow environments to recognize Italian hand signs with 80% accuracy.
 
 - category: Mobile App Development
   projects: 
