Added Resume Download

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -5,6 +5,7 @@
   summaries:
     - description: ETH University, Switzerland – Semester exchange programme
     - description: Scholar of Temasek Education Foundation
+    - description: GPA - 4.29/5 (Honours – Distinction)
 
 #High-school
 - degree: Diploma in Information Technology with Merit
@@ -12,4 +13,5 @@
   date: Apr 2010 &mdash; May 2013
   summaries:
     - description: Diploma Plus – Minor in Psychology Fundamentals
+    - description: GPA – 3.92/4 (9 Distinctions and 14 A’s)
     - description: Director’s List for AY 10/11 & AY 11/12
