Added Javascript for Accessibility

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -35,7 +35,7 @@
     - title: Emergency Ambulance Medic – Singapore Civil Defence Force
       duration: Jun, 2013 &mdash; Jun, 2015
       summaries:
-        - description: Responded to emergency calls and provided pre-hospital care services, life support and first-aid treatment to critically ill and injured patients
+        - description: Provided fast patient service, life support and ambulatory care to extremely ill and injured patients in a stressful and constantly changing environment
 
 - category: Languages
   experiences:
