--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,11 +1,11 @@
 # College
-- degree: Bachelor in Computer Engineering – Honours
-  uni: NUS University, Singapore
+- degree: Bachelor of Engineering (Computer Engineering) – Honours
+  uni: National University of Singapore
   date: Aug 2015 &mdash; Present
   summaries:
-    - description: ETH University, Switzerland – Semester exchange programme
-    - description: Scholar of Temasek Education Foundation
     - description: GPA - 4.29/5 (Honours – Distinction)
+    - description: Scholar of Temasek Foundation Nurtures
+    - description: ETH University, Switzerland – Semester exchange programme
 
 #High-school
 - degree: Diploma in Information Technology with Merit
@@ -14,4 +14,4 @@
   summaries:
     - description: Diploma Plus – Minor in Psychology Fundamentals
     - description: GPA – 3.92/4 (9 Distinctions and 14 A’s)
-    - description: Director’s List for AY 10/11 & AY 11/12
+    - description: Director’s List in academic years 2010-2012 for being in the top 5% of the cohort
