--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,33 +3,33 @@
   - title: Teaching Assistant - National University of Singapore, Singapore
     duration: Jan, 2018 &mdash; Present
     summaries: 
-    - description: Assist Professors in teaching undergraduate computer engineering students in their capstone design project course where they have to built an wearable device that tracks and predicts dance moves using machine learning and IoT sensors
+    - description: Mentor undergraduate computer engineering students in their capstone design project where they have to build a wearable device that tracks and predicts dance moves using machine learning and IoT sensors.
 
   - title: Technical Support Officer – Temasek Polytechnic, Singapore
     duration: Apr, 2013 &mdash; May, 2013
     summaries: 
-    - description: Assisted Lecturers in teaching freshmen students programming methodology and data structures
-    - description: Modified and updated the student fitness web application in PHP
+    - description: Taught freshmen students programming methodology and data structures resulting in students having a strong foundation in computer science and problem-solving skills
+    - description: Revamped the student fitness web application in PHP improving the user interface and compatibility with all browsers
 
   - title: Project Manager Intern – Blue Glue (Youkilele) Ltd, Indonesia
     duration: Aug, 2012 &mdash; Dec, 2012
     summaries: 
-    - description: Leads a team in conceptualizing and building an Employee Task Management web application
-    - description: Revamped Database system with new relational database for Manufacturing and Inventory departments
+    - description: Lead a team in conceptualizing and developing an Employee Task Management web application in order to assign and manage tasks to employees effectively
+    - description: Revamped Database system with new relational database for Manufacturing and Inventory departments to reduce in reliance of excel sheets to manage data
 
 - category: Leadership
   experiences:
   - title: Delegate – Youth Model ASEAN Conference
     duration: Dec, 2012
     summaries: 
-    - description: Discussed socio-political, environmental and economic issues prevailing in ASEAN region with the Singapore Minister of Culture, Community and Youth
+    - description: Examined socio-political, environmental and economic issues prevailing in ASEAN region with the Singapore Minister of Culture, Community and Youth to ensure peace and prosperity in ASEAN region
 
   - title: President – IT Special Interest Group
     duration: Jul, 2011 &mdash; Jun, 2012
     summaries: 
-    - description: Liaised with Course Manager and Year Coordinators regarding the welfare of the students
-    - description: Organized events, workshops and exchange programmes for students of Diploma in IT
-
+    - description: Represented Diploma in IT students in highlighting their academic and administrative matters with Course Manager and Year Coordinators to ensure the welfare of the students are being sustained
+    - description: Organized events and academic workshops for students of Diploma in IT providing opportunities to learn beyond classroom setting
+    
 - category: Conscription
   experiences:
     - title: Emergency Ambulance Medic – Singapore Civil Defence Force
