--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,17 +1,21 @@
-# College
-- degree: Bachelor of Engineering (Computer Engineering) – Honours
+
+- degree: B.Eng. (Computer Engineering), GPA - 4.32/5 (Honours – Distinction)
   uni: National University of Singapore
   date: Aug 2015 &mdash; Present
   summaries:
-    - description: GPA - 4.29/5 (Honours – Distinction)
-    - description: Scholar of Temasek Foundation Nurtures
-    - description: ETH University, Switzerland – Semester exchange programme
+    - description: Awarded full merit-based bond free scholarship by Temasek Foundation Nurtures
 
-#High-school
+- degree: 
+  uni: Student Exchange Programme (SEP), ETH University, Switzerland
+  date: Feb 2017 &mdash; Aug 2017
+  summaries:
+    - description: Development of Machine Learning applications through specialized coursework
+    - description: Competed in Kaggle competitions and ranked as one of the top in the class
+
 - degree: Diploma in Information Technology with Merit
   uni: Temasek Polytechnic, Singapore
   date: Apr 2010 &mdash; May 2013
   summaries:
     - description: Diploma Plus – Minor in Psychology Fundamentals
     - description: GPA – 3.92/4 (9 Distinctions and 14 A’s)
-    - description: Director’s List in academic years 2010-2012 for being in the top 5% of the cohort
+    - description: Director’s List in Academic Years 2010-2012 for being in the top 5% of the cohort
