--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,13 @@
 - category: Work Experiences
   experiences:
+  - title: Software Engineer Intern, VISA Worldwide Pte Ltd, Singapore
+    duration: May, 2018 &mdash; Present
+    summaries: 
+    - description: Conceptualized and Developed data visualization dashboard for Marketing department to visualize promotion data using elasticsearch, logstash and kibana to promote digital commerce and expand reach of VISA brand
+    - description: Designed front-end responsive web design for FIFA 2018 promotions web application
+
   - title: Teaching Assistant - National University of Singapore, Singapore
-    duration: Jan, 2018 &mdash; Present
+    duration: Jan, 2018 &mdash; Apr, 2018
     summaries: 
     - description: Mentor undergraduate computer engineering students in their capstone design project where they have to build a wearable device that tracks and predicts dance moves using machine learning and IoT sensors.
 
@@ -17,6 +23,20 @@
     - description: Lead a team in conceptualizing and developing an Employee Task Management web application in order to assign and manage tasks to employees effectively
     - description: Revamped Database system with new relational database for Manufacturing and Inventory departments to reduce in reliance of excel sheets to manage data
 
+- category: Community Engagement
+  experiences:
+    - title: Nagore Dargah Indian Muslim Heritage Centre (NDIMHC), Singapore
+      duration: Dec 2015 &mdash; Present
+      summaries:
+        - description: Volunteer as a curator to engage and share with the local visitors and tourists about the rich history, culture, traditions of Tamil language and contributions of our pioneers to the nation of Singapore
+
+- category: Conscription
+  experiences:
+    - title: Emergency Ambulance Medic – Singapore Civil Defence Force
+      duration: Jun, 2013 &mdash; Jun, 2015
+      summaries:
+        - description: Provided fast patient service, life support and ambulatory care to extremely ill and injured patients in a stressful and constantly changing environment
+
 - category: Leadership
   experiences:
   - title: Delegate – Youth Model ASEAN Conference
@@ -30,26 +50,10 @@
     - description: Represented Diploma in IT students in highlighting their academic and administrative matters with Course Manager and Year Coordinators to ensure the welfare of the students are being sustained
     - description: Organized events and academic workshops for students of Diploma in IT providing opportunities to learn beyond classroom setting
     
-- category: Conscription
-  experiences:
-    - title: Emergency Ambulance Medic – Singapore Civil Defence Force
-      duration: Jun, 2013 &mdash; Jun, 2015
-      summaries:
-        - description: Provided fast patient service, life support and ambulatory care to extremely ill and injured patients in a stressful and constantly changing environment
-
-- category: Languages
+- category: Additional Information
   experiences:
     - title: 
       duration: 
       summaries:
-        - description: Tamil - Mother tongue
-        - description: English - Proficient (level C2 on European Language Scale)
-        - description: Japanese - Basic knowledge (level A1)
-        - description: German - Basic knowledge (level A1)
-
-- category: Hobbies
-  experiences:
-    - title: 
-      duration: 
-      summaries:
-        - description: Hiking, Cycling, Current affairs, Tech enthusiast
+        - description: Proficient in Tamil and English, and basic knowledge of Japanese and Arabic
+        - description: Actively Pursues Hiking and Cycling
